Add 'Ignore existing videos' option for playlists

--- a/YouTube Downloader/Properties/Settings.settings
+++ b/YouTube Downloader/Properties/Settings.settings
@@ -35,5 +35,8 @@
     <Setting Name="MaxSimDownloads" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">100</Value>
     </Setting>
+    <Setting Name="PlaylistIgnoreExisting" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
