--- a/YouTube Downloader/App.config
+++ b/YouTube Downloader/App.config
@@ -40,6 +40,9 @@
       <setting name="MaxSimDownloads" serializeAs="String">
         <value>100</value>
       </setting>
+      <setting name="PlaylistIgnoreExisting" serializeAs="String">
+        <value>False</value>
+      </setting>
     </YouTube_Downloader.Properties.Settings>
   </userSettings>
 </configuration>
