--- a/YouTube Downloader/YouTube Downloader.csproj
+++ b/YouTube Downloader/YouTube Downloader.csproj
@@ -50,7 +50,7 @@
   <ItemGroup>
     <Compile Include="App.cs" />
     <Compile Include="Classes\WindowStates.cs" />
-    <Compile Include="Controls\OperationListViewItem.cs" />
+    <Compile Include="Controls\OperationModel.cs" />
     <Compile Include="Classes\WindowState.cs" />
     <Compile Include="Controls\ListViewEx.cs">
       <SubType>Component</SubType>
