Clearer text color and bigger progress bar for Queue. Closes #29

--- a/YouTube Downloader/YouTube Downloader.csproj
+++ b/YouTube Downloader/YouTube Downloader.csproj
@@ -74,6 +74,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renderers\BarTextProgress.cs" />
     <Compile Include="Renderers\BarTextRenderer.cs">
       <SubType>Component</SubType>
     </Compile>
