Fix Xml de/serialization for WindowState(s) &...
save column visibility and width (correctly)

--- a/YouTube Downloader/App.config
+++ b/YouTube Downloader/App.config
@@ -43,6 +43,9 @@
       <setting name="PlaylistIgnoreExisting" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="VisibleColumns" serializeAs="String">
+        <value>1,1,0,1,1,1</value>
+      </setting>
     </YouTube_Downloader.Properties.Settings>
   </userSettings>
 </configuration>
