Implement option to save playlist in playlist named folder. Closes #24

--- a/YouTube Downloader/App.config
+++ b/YouTube Downloader/App.config
@@ -46,6 +46,9 @@
       <setting name="VisibleColumns" serializeAs="String">
         <value>1,1,0,1,1,1</value>
       </setting>
+      <setting name="PlaylistNamedFolder" serializeAs="String">
+        <value>False</value>
+      </setting>
     </YouTube_Downloader.Properties.Settings>
   </userSettings>
 </configuration>
