--- a/YouTube Downloader/Properties/Settings.settings
+++ b/YouTube Downloader/Properties/Settings.settings
@@ -44,5 +44,8 @@
     <Setting Name="ColumnWidths" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="PlaylistNamedFolder" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
