Save last used playlist filter. Closes #31

--- a/YouTube Downloader/App.config
+++ b/YouTube Downloader/App.config
@@ -49,6 +49,9 @@
       <setting name="PlaylistNamedFolder" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="PlaylistLastUsedFilter" serializeAs="String">
+        <value />
+      </setting>
     </YouTube_Downloader.Properties.Settings>
   </userSettings>
 </configuration>
