--- a/YouTube Downloader/Properties/Settings.settings
+++ b/YouTube Downloader/Properties/Settings.settings
@@ -47,5 +47,8 @@
     <Setting Name="PlaylistNamedFolder" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="PlaylistLastUsedFilter" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
