Implement design idea from #42 and save playlist reverse and number prefix. Closes #42

--- a/YouTube Downloader/App.config
+++ b/YouTube Downloader/App.config
@@ -52,6 +52,12 @@
       <setting name="PlaylistLastUsedFilter" serializeAs="String">
         <value />
       </setting>
+      <setting name="PlaylistReverse" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="PlaylistNumberPrefix" serializeAs="String">
+        <value>False</value>
+      </setting>
     </YouTube_Downloader.Properties.Settings>
   </userSettings>
 </configuration>
