--- a/YouTube Downloader/Properties/Settings.settings
+++ b/YouTube Downloader/Properties/Settings.settings
@@ -50,5 +50,11 @@
     <Setting Name="PlaylistLastUsedFilter" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="PlaylistReverse" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="PlaylistNumberPrefix" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
